<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            style="@style/text_normal"
            android:layout_marginStart="5dp"
            android:text = "@string/name"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/stats_name"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            style="@style/text_normal"
            tools:text="Name"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            style="@style/text_normal"
            android:layout_marginStart="5dp"
            android:text = "@string/base_stat"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/base_stat"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            style="@style/text_normal"
            tools:text="Base Stat"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            style="@style/text_normal"
            android:layout_marginStart="5dp"
            android:text = "@string/effort"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/effort"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            style="@style/text_normal"
            tools:text="Effort"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/action"/>
</LinearLayout>