<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".MainContentFragment">
    <View
        android:id="@+id/divider_1"
        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="PokeName"
        android:lines="1"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        app:layout_constraintBottom_toTopOf="@id/divider_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white" />
    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toTopOf="@id/divider_3"
        android:background="@color/white"/>
    <View
        android:id="@+id/divider_3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_2"
        app:layout_constraintBottom_toTopOf="@id/front"
        app:layout_constraintWidth_percent="0.01"
        />

    <ImageView
        android:id="@+id/front"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:background="@color/action"
        tools:src="@mipmap/not_found_front"
        android:contentDescription="@string/front_image"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toEndOf="@id/divider_3"
        app:layout_constraintTop_toBottomOf="@id/divider_2"
        app:layout_constraintBottom_toTopOf="@id/divider_5"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.485" />
    <View
        android:id="@+id/divider_4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toEndOf="@id/front"
        app:layout_constraintTop_toBottomOf="@id/divider_2"
        app:layout_constraintBottom_toTopOf="@id/divider_5"
        app:layout_constraintWidth_percent="0.01"
        />

    <ImageView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:background="@color/action"
        tools:src="@mipmap/not_found_front"
        android:contentDescription="@string/back_image"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toEndOf="@+id/divider_4"
        app:layout_constraintTop_toBottomOf="@id/divider_2"
        app:layout_constraintBottom_toTopOf="@id/divider_5"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.485" />

    <View
        android:id="@+id/divider_5"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/front"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        android:background="@color/white"/>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/action"
        app:layout_constraintBottom_toTopOf="@id/divider_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:weightSum="100"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/text_normal"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/id"
                    />
                <TextView
                    style="@style/text_normal"
                    android:id="@+id/id"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    tools:text="@string/id"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/text_normal"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/base_experience"
                    />
                <TextView
                    style="@style/text_normal"
                    android:id="@+id/base_experience"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    tools:text="@string/base_experience"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/text_normal"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/height"
                    />
                <TextView
                    style="@style/text_normal"
                    android:id="@+id/height"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    tools:text="@string/height"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/text_normal"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/weight"
                    />
                <TextView
                    style="@style/text_normal"
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    tools:text="@string/weight"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/text_normal"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/species"
                    />
                <TextView
                    style="@style/text_normal"
                    android:id="@+id/species"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    tools:text="@string/species"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/text_normal"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/order"
                    />
                <TextView
                    style="@style/text_normal"
                    android:id="@+id/order"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    tools:text="@string/order"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/label_abilities"
                style="@style/text_heading"
                android:background="@color/action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:layout_marginBottom="2dp"
                android:text="@string/abilities" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/abilities_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/label_moves"
                style="@style/text_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/action"
                android:gravity="center"
                android:text="@string/moves" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moves_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/label_stats"
                style="@style/text_heading"
                android:background="@color/action"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/stats" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stats_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/label_types"
                style="@style/text_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/action"
                android:gravity="center"
                android:text="@string/types" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/types_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />
        </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/divider_9"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/refresh"
        android:background="@color/white"/>

    <LinearLayout
        android:id="@+id/help_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/refresh">
        <TextView
            android:id="@+id/error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/text_heading2"
            android:text="@string/something_bad_has_happened"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/text_heading"
            android:text="@string/press_refresh_to_start"/>
    </LinearLayout>

    <Button

        android:id="@+id/refresh"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:textSize="20sp"
        android:textColor="@drawable/button_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/refresh" />


</androidx.constraintlayout.widget.ConstraintLayout>
